Prevent content spillage

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -22,6 +22,10 @@ footer {
   text-align: right;
 }
 
+footer li {
+  float: left;
+}
+
 footer li::after {
   content: '/';
   margin-left: .7rem;
